# neural-network

./: CMakeLists.txt  LICENSE  README.md  test.cpp
data/: xor.csv
src/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
